# gstreamer1.0-drpai

./: .gitattributes  .gitignore  JSON.md  LICENSE.md  README.md  bitbake-recipe.bb  meson-aarch64-poky.cross  meson.build  meson.cross  meson_options.txt
.github/workflows/: ci.yml  codeql.yml
bitbake-recipes/: gst-launch-split.bb  gstreamer1.0-drpai-deeppose.bb  gstreamer1.0-drpai-models.bb  gstreamer1.0-drpai-yolo.bb  gstreamer1.0-drpai.bb  gstreamer1.0-drpai.inc
gst-app/: meson.build
gst-app/src/: main.c  main.cpp  messages.h  split_thread.h  thread.h
gst-plugin/: meson.build
gst-plugin/src/: ascii.h  box.cpp  box.h  define.h  drpai.cpp  drpai.h  drpai_controller.cpp  drpai_controller.h  fps.h  gst_udma_buffer_pool.cpp  gst_udma_buffer_pool.h  gstdrpai.c  gstdrpai.cpp  gstdrpai.h  gstplugin.c  gstplugin.h  history.cpp  history.h  image.cpp  image.h  json.h  properties.h  rate_controller.h  tracker.cpp  tracker.h
gst-plugin/src/drpai-models/: drpai_base.cpp  drpai_base.h  drpai_connection.cpp  drpai_connection.h  drpai_deeppose.cpp  drpai_deeppose.h  drpai_yolo.cpp  drpai_yolo.h  meson.build
gst-plugin/src/drpai-models/drpai-deeppose/: drpai_deeppose.cpp  drpai_deeppose.h  meson.build
gst-plugin/src/drpai-models/drpai-yolo/: detection_filterer.cpp  detection_filterer.h  drpai_yolo.cpp  drpai_yolo.h  meson.build  tracker.cpp  tracker.h
gst-plugin/src/dynamic-post-process/: postprocess.cpp  postprocess.h
gst-plugin/src/dynamic-post-process/deeppose/: deeppose.cpp  deeppose.h  meson.build
gst-plugin/src/dynamic-post-process/yolo/: meson.build  yolo.cpp  yolo.h
gst-plugin/src/models/yolov2/: meson.build  yolov2.c  yolov2.h
gst-plugin/src/models/yolov3/: meson.build  yolov3.c  yolov3.h
gst-plugin/src/utils/: elapsed_time.h  json.h  rate_sleeper.h  smoothie.h
gst-plugin/tests/: filter_test.cpp  meson.build  tracker_test.cpp
models/tinyyolov2/: drp_lib_info.txt  drp_param.txt  drp_param_info.txt  tinyyolov2.json  tinyyolov2_addrmap_intm.txt  tinyyolov2_addrmap_intm.yaml  tinyyolov2_data_out_list.txt  tinyyolov2_drpcfg.mem  tinyyolov2_summary.xlsx  tinyyolov2_tbl_addr_data.txt  tinyyolov2_tbl_addr_data_out.txt  tinyyolov2_tbl_addr_drp_config.txt  tinyyolov2_tbl_addr_merge.txt  tinyyolov2_tbl_addr_weight.txt  tinyyolov2_tbl_addr_work.txt  tinyyolov3_anchors.txt
models/tinyyolov3/: tinyyolov3_anchors.txt  tinyyolov3_post_process_params.txt
models/yolov2/: drp_lib_info.txt  drp_param.txt  drp_param_info.txt  yolov2.json  yolov2_addrmap_intm.txt  yolov2_addrmap_intm.yaml  yolov2_anchors.txt  yolov2_data_out_list.txt  yolov2_drpcfg.mem  yolov2_post_process_params.txt  yolov2_prepost_opt.yaml  yolov2_summary.xlsx  yolov2_tbl_addr_data.txt  yolov2_tbl_addr_data_out.txt  yolov2_tbl_addr_drp_config.txt  yolov2_tbl_addr_merge.txt  yolov2_tbl_addr_weight.txt  yolov2_tbl_addr_work.txt
models/yolov3/: drp_lib_info.txt  drp_param.txt  drp_param_info.txt  yolov3.json  yolov3_addrmap_intm.txt  yolov3_addrmap_intm.yaml  yolov3_data_out_list.txt  yolov3_prepost_opt.yaml  yolov3_summary.xlsx  yolov3_tbl_addr_data.txt  yolov3_tbl_addr_data_out.txt  yolov3_tbl_addr_drp_config.txt  yolov3_tbl_addr_merge.txt  yolov3_tbl_addr_weight.txt  yolov3_tbl_addr_work.txt
